Thu Jun 21 15:01:00 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Check the edit distance 3 words are found if
	  asked for.

Thu Jun 21 14:59:15 BST 2007  Olly Betts <olly@survex.com>

	* api/omdatabase.cc,common/omdebug.h: Add some debug tracing for the
	  spelling correction.

Thu Jun 21 13:45:12 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.cc,docs/spelling.rst: Generate
	  "bookends" for four character words too, so that we suggest
	  "fuor" -> "four".
	* tests/api_wrdb.cc: More testcases.

Thu Jun 21 13:08:07 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Assorted minor improvements.  Add note about not
	  detecting single character substitutions in two character words.

Thu Jun 21 13:02:57 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Check cases for single edits to a two character
	  word work as expected.

Thu Jun 21 04:13:46 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Add test cases to check we find all single edit
	  errors for a three letter word.

Thu Jun 21 04:08:11 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.h: Now that
	  FlintSpellingTable::merge_changes() is only called from within the
	  class, make it a private method.  discard_changes() is only used
	  once, and from within the class, so just inline it as that's
	  clearer.  Make the comment about the overridden methods a doxygen
	  grouping comment,

Thu Jun 21 04:02:51 BST 2007  Olly Betts <olly@survex.com>

	* docs/spelling.rst: Update to mention "bookend" bigrams.

Thu Jun 21 03:56:52 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_spelling.cc: Generate "bookend" spelling
	  entries for two and three letter terms, consisting of the prefix 'B'
	  followed by the first and last letters.  This allows us to handle
	  substitution or deletion of the middle character of a three letter
	  word, or insertion in the middle of a two letter word.
