@@ -1,3 +1,8 @@
+Thu Jun 21 16:15:22 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/queryparsertest.cc: Add feature tests for correcting spelling
+	  errors in the QueryParser.
+
 Thu Jun 21 15:01:00 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/api_wrdb.cc: Check the edit distance 3 words are found if
